--- a/index.html
+++ b/index.html
@@ -1,66 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<title>Assignment 01</title>
-		<meta name="robots" content="noindex" />
 
-		<link rel="stylesheet" href="./css/styles.css" />
-	</head>
+<head>
+	<meta charset="utf-8" />
+	<title>Assignment 01</title>
+	<meta name="robots" content="noindex" />
 
-	<body>
-		<div class="cv-document">
-			<div class="cv-page">
-				<div class="section" id="info">
-					<h2 class="section-title"></h2>
-					<div class="section-content"></div>
-				</div>				
+	<link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-				<div class="section" id="target">
-					<h2 class="section-title">Mục tiêu nghề nghiệp</h2>
-					<div class="section-content"></div>
-				</div>
-
-				<div class="section" id="education">
-					<h2 class="section-title">Học vấn</h2>
-					<div class="section-content"></div>
-				</div>
-
-				<div class="section" id="experience">
-					<h2 class="section-title">Kinh nghiệm làm việc</h2>
-					<div class="section-content"></div>
-				</div>
-
-				<div class="section" id="activity">
-					<h2 class="section-title">Hoạt động</h2>
-					<div class="section-content"></div>
-				</div>
-
-				<div class="section" id="skill">
-					<h2 class="section-title">Kỹ năng</h2>
-					<div class="section-content"></div>
-				</div>
-
-				<div class="section" id="certificate">
-					<h2 class="section-title">Chứng nhận - Giải thưởng</h2>
-					<div class="section-content"></div>
-				</div>
-
-				<div class="section" id="hobby">
-					<h2 class="section-title">Sở thích</h2>
-					<div class="section-content"></div>
-				</div>
-
-				<div class="section" id="project">
-					<h2 class="section-title">Dự án</h2>
-					<div class="section-content"></div>
-				</div>
-
-				<div class="section" id="contact">
-					<h2 class="section-title">Liên hệ</h2>
-					<div class="section-content"></div>
+<body>
+	<div class="cv-document">
+		<div class="cv-page">
+			<div class="section" id="info">
+				<h1 class="name">Nguyen Huu Thang</h1>
+				<div class="section-content">
+					<div class="my-info">
+						<strong>
+							<div>Ngay sinh</div>
+							<div>Gioi tinh</div>
+							<div>Dien thoai</div>
+							<div>Email</div>
+							<div>Dia chi</div>
+							<div>Website</div>
+						</strong>
+					</div>
+					<div class="content-info">
+						<div>05/02/2003</div>
+						<div>Nam</div>
+						<div>(+84) 97572xxxx</div>
+						<div>thangfx4298@funix.edu.vn</div>
+						<div>Thai Nguyen</div>
+						<div>https"//</div>
+					</div>
+					<div>
+						<img src="/images/default-avatar.png" alt="avt" class="avt">
+					</div>
 				</div>
 			</div>
+
+			<div class="section" id="target">
+				<h2 class="section-title">Mục tiêu nghề nghiệp</h2>
+				<div class="section-content">
+					<p>
+
+					</p>
+				</div>
+			</div>
+
+			<div class="section" id="education">
+				<h2 class="section-title">Học vấn</h2>
+				<div class="section-content"></div>
+			</div>
+
+			<div class="section" id="experience">
+				<h2 class="section-title">Kinh nghiệm làm việc</h2>
+				<div class="section-content"></div>
+			</div>
+
+			<div class="section" id="activity">
+				<h2 class="section-title">Hoạt động</h2>
+				<div class="section-content"></div>
+			</div>
+
+			<div class="section" id="skill">
+				<h2 class="section-title">Kỹ năng</h2>
+				<div class="section-content"></div>
+			</div>
+
+			<div class="section" id="certificate">
+				<h2 class="section-title">Chứng nhận - Giải thưởng</h2>
+				<div class="section-content"></div>
+			</div>
+
+			<div class="section" id="hobby">
+				<h2 class="section-title">Sở thích</h2>
+				<div class="section-content"></div>
+			</div>
+
+			<div class="section" id="project">
+				<h2 class="section-title">Dự án</h2>
+				<div class="section-content"></div>
+			</div>
+
+			<div class="section" id="contact">
+				<h2 class="section-title">Liên hệ</h2>
+				<div class="section-content"></div>
+			</div>
 		</div>
-	</body>
+	</div>
+</body>
+
 </html>
