--- a/index.html
+++ b/index.html
@@ -42,15 +42,26 @@
 			<div class="section" id="target">
 				<h2 class="section-title">Mục tiêu nghề nghiệp</h2>
 				<div class="section-content">
-					<p>
-
+					<p id="content-target">
+						Là một sinh viên hoàn thànhchương trình chứng chỉ Doanh Nghiệp của FUNIX. Em mong muốn sẽ được làm việc tại
+						vị trí Fullstack Developer, có thể vẫn dụng kiến thức được trau dồi và không ngừng phát triển bản thân, cũng
+						như hoàn thành tốt nhất công việc được giao.
 					</p>
 				</div>
 			</div>
 
 			<div class="section" id="education">
 				<h2 class="section-title">Học vấn</h2>
-				<div class="section-content"></div>
+				<div class="section-content">
+					<div>
+						<div>06/2021 - 05/2022</div>
+
+						<div><strong>FUNIX</strong>
+							<br> Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack
+							<br> GPA:9/10
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="section" id="experience">
