--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>
 
 			<div class="section" id="target">
-				<h2 class="section-title">Mục tiêu nghề nghiệp</h2>
+				<h2 class="section-title">Mục tiêu nghề ng hiệp</h2>
 				<div class="section-content">
 					<p id="content-target">
 						Là một sinh viên hoàn thànhchương trình chứng chỉ Doanh Nghiệp của FUNIX. Em mong muốn sẽ được làm việc tại
@@ -53,9 +53,16 @@
 			<div class="section" id="education">
 				<h2 class="section-title">Học vấn</h2>
 				<div class="section-content">
-					<div>
+					<div class="flex">
 						<div>06/2021 - 05/2022</div>
+						<div><strong>FUNIX</strong>
+							<br> Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack
+							<br> GPA:9/10
+						</div>
+					</div>
 
+					<div class="flex">
+						<div>06/2021 - 05/2022</div>
 						<div><strong>FUNIX</strong>
 							<br> Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack
 							<br> GPA:9/10
@@ -66,40 +73,103 @@
 
 			<div class="section" id="experience">
 				<h2 class="section-title">Kinh nghiệm làm việc</h2>
-				<div class="section-content"></div>
+				<div class="section-content">
+					<div class="flex">
+						<div>05/2022 - Hiện tại</div>
+						<div><strong>Công ty Y</strong>
+							<br> Full Stack Developer
+							<br>
+						</div>
+					</div>
+
+					<div class="flex">
+						<div>06/2021 - 04/2022</div>
+						<div><strong>Công ty X</strong>
+							<br> Web Designer
+							<br>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="section" id="activity">
 				<h2 class="section-title">Hoạt động</h2>
-				<div class="section-content"></div>
+				<div class="section-content">
+					<div class="flex">
+						<div>03/2019 - 05/2019</div>
+						<div><strong>FPT Edu Hackathon 2019</strong>
+							<br> Giải 3 bảng A
+							<br> Đề tài: Trang web về phân loại rác thải.
+						</div>
+					</div>
+
+					<div class="flex">
+						<div>08/2016 - 08/2017</div>
+						<div><strong>Câu lạc bộ Z</strong>
+							<br> Trưởng ban chuyên môn
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="section" id="skill">
 				<h2 class="section-title">Kỹ năng</h2>
-				<div class="section-content"></div>
+				<div class="section-content">
+					<div class="flex">
+						<div><strong>HTML/CSS</strong></div>
+						<div class="right-content">Fundamental</div>
+					</div>
+					<div class="flex">
+						<div><strong>Javascript</strong></div>
+						<div class="right-content">Intermediate</div>
+					</div>
+					<div class="flex">
+						<div><strong>NodeJS</strong></div>
+						<div class="right-content">Intermediate</div>
+					</div>
+					<div class="flex">
+						<div><strong>Bootstrap 5</strong></div>
+						<div class="right-content">Fundamental</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="section" id="certificate">
 				<h2 class="section-title">Chứng nhận - Giải thưởng</h2>
-				<div class="section-content"></div>
-			</div>
+				<div class="section-content">
+					<div class="flex">
+						<div>2021</div>
+						<div class="right-content"">Chứng chỉ lập trình web - funix</div>
+					</div>
+					<div class=" flex">
+							<div>2021</div>
+							<div class="right-content">Chứng chỉ lập trình Javascript - funix</div>
+						</div>
+					</div>
 
-			<div class="section" id="hobby">
-				<h2 class="section-title">Sở thích</h2>
-				<div class="section-content"></div>
-			</div>
+					<div class="section" id="hobby">
+						<h2 class="section-title">Sở thích</h2>
+						<div class="section-content">
+							<ul>
+								<li>Âm nhạc</li>
+								<li>Chơi game</li>
+								<li>Du lich</li>
+								<li>Nấu ăn</li>
+							</ul>
+						</div>
+					</div>
 
-			<div class="section" id="project">
-				<h2 class="section-title">Dự án</h2>
-				<div class="section-content"></div>
-			</div>
+					<div class="section" id="project">
+						<h2 class="section-title">Dự án</h2>
+						<div class="section-content"></div>
+					</div>
 
-			<div class="section" id="contact">
-				<h2 class="section-title">Liên hệ</h2>
-				<div class="section-content"></div>
+					<div class="section" id="contact">
+						<h2 class="section-title">Liên hệ</h2>
+						<div class="section-content"></div>
+					</div>
+				</div>
 			</div>
-		</div>
-	</div>
 </body>
 
 </html>
