--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@
 				<div class="section-content">
 					<div class="flex">
 						<div><strong>HTML/CSS</strong></div>
-						<div class="right-content">Fundamental</div>
+						<div>Fundamental</div>
 					</div>
 					<div class="flex">
 						<div><strong>Javascript</strong></div>
-						<div class="right-content">Intermediate</div>
+						<div>Intermediate</div>
 					</div>
 					<div class="flex">
 						<div><strong>NodeJS</strong></div>
-						<div class="right-content">Intermediate</div>
+						<div>Intermediate</div>
 					</div>
 					<div class="flex">
 						<div><strong>Bootstrap 5</strong></div>
-						<div class="right-content">Fundamental</div>
+						<div>Fundamental</div>
 					</div>
 				</div>
 			</div>
