--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 					<div class="section" id="hobby">
 						<h2 class="section-title">Sở thích</h2>
 						<div class="section-content">
-							<ul>
+							<ul style="font-size: 20px;">
 								<li>Âm nhạc</li>
 								<li>Chơi game</li>
 								<li>Du lich</li>
@@ -161,7 +161,39 @@
 
 					<div class="section" id="project">
 						<h2 class="section-title">Dự án</h2>
-						<div class="section-content"></div>
+						<div class="section-content">
+							<div>
+								<h1 style="text-transform: uppercase; margin-bottom: 0;">trang web quan ly thu cung </h1>
+								<p style="margin-top: 0;">2021</p>
+								<ul>
+									<li><strong>Vi tri: </strong>Developer</li>
+									<li><strong>Mo ta: </strong>Ung dung quan ly thong tin cua thu cung nhu: can nang, giong, tinh trang
+										tiem chung,... Bao gom cac chuc nang them / sua / xoa.</li>
+									<li><strong>Nhiem vu: </strong>Phat trien, toi uu code va xu ly loi.</li>
+									<li><strong>Cong nghe: </strong>HTML, CSS</li>
+								</ul>
+
+								<h1 style="text-transform: uppercase; margin-bottom: 0;">trang web xem tin tuc </h1>
+								<p style="margin-top: 0;">2021</p>
+								<ul>
+									<li><strong>Vi tri: </strong>Developer</li>
+									<li><strong>Mo ta: </strong>Trang Web xem tin tuc tu nhieu nguon khac nhau, nguoi dung co the tim kiem
+										cac tin tuc dua tren tu khoa.</li>
+									<li><strong>Nhiem vu: </strong>Phat trien, toi uu code va xu ly loi.</li>
+									<li><strong>Cong nghe: </strong>HTML, CSS</li>
+								</ul>
+
+								<h1 style="text-transform: uppercase; margin-bottom: 0;">cv ca nhan</h1>
+								<p style="margin-top: 0;">2021</p>
+								<ul>
+									<li><strong>Vi tri: </strong>Developer</li>
+									<li><strong>Mo ta: </strong>Trang Web xem tin tuc tu nhieu nguon khac nhau, nguoi dung co the tim kiem
+										cac tin tuc dua tren tu khoa.</li>
+									<li><strong>Nhiem vu: </strong>Phat trien, toi uu code va xu ly loi.</li>
+									<li><strong>Cong nghe: </strong>HTML, CSS</li>
+								</ul>
+							</div>
+						</div>
 					</div>
 
 					<div class="section" id="contact">
