--- a/index.html
+++ b/index.html
@@ -198,7 +198,14 @@
 
 					<div class="section" id="contact">
 						<h2 class="section-title">Liên hệ</h2>
-						<div class="section-content"></div>
+						<div class="section-content">
+							<ol>
+								<li> <a href="#">Facebook</a> </li>
+								<li> <a href="#">Linkedin</a> </li>
+								<li> <a href="#">Github</a> </li>
+
+							</ol>
+						</div>
 					</div>
 				</div>
 			</div>
